; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/udf/extr_super.c_udf_sync_fs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/udf/extr_super.c_udf_sync_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i64 }
%struct.udf_sb_info = type { i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.super_block*, i32)* @udf_sync_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udf_sync_fs(%struct.super_block* %0, i32 %1) #0 {
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.udf_sb_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.super_block*, %struct.super_block** %3, align 8
  %7 = call %struct.udf_sb_info* @UDF_SB(%struct.super_block* %6)
  store %struct.udf_sb_info* %7, %struct.udf_sb_info** %5, align 8
  %8 = load %struct.udf_sb_info*, %struct.udf_sb_info** %5, align 8
  %9 = getelementptr inbounds %struct.udf_sb_info, %struct.udf_sb_info* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.udf_sb_info*, %struct.udf_sb_info** %5, align 8
  %12 = getelementptr inbounds %struct.udf_sb_info, %struct.udf_sb_info* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load %struct.udf_sb_info*, %struct.udf_sb_info** %5, align 8
  %17 = getelementptr inbounds %struct.udf_sb_info, %struct.udf_sb_info* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @mark_buffer_dirty(i32 %18)
  %20 = load %struct.super_block*, %struct.super_block** %3, align 8
  %21 = getelementptr inbounds %struct.super_block, %struct.super_block* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load %struct.udf_sb_info*, %struct.udf_sb_info** %5, align 8
  %23 = getelementptr inbounds %struct.udf_sb_info, %struct.udf_sb_info* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  br label %24

24:                                               ; preds = %15, %2
  %25 = load %struct.udf_sb_info*, %struct.udf_sb_info** %5, align 8
  %26 = getelementptr inbounds %struct.udf_sb_info, %struct.udf_sb_info* %25, i32 0, i32 0
  %27 = call i32 @mutex_unlock(i32* %26)
  ret i32 0
}

declare dso_local %struct.udf_sb_info* @UDF_SB(%struct.super_block*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mark_buffer_dirty(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
